working on dark mode

--- a/web/front/package.json
+++ b/web/front/package.json
@@ -12,6 +12,11 @@
     "@ant-design/icons-vue": "^6.0.1",
     "@deck.gl/core": "^8.8.20",
     "@deck.gl/layers": "^8.8.20",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
     "@types/underscore": "^1.11.3",
     "ant-design-vue": "^2.0.0",
     "axios": "^0.24.0",
