--- a/web/front/package.json
+++ b/web/front/package.json
@@ -26,6 +26,7 @@
     "less": "3.13.0",
     "less-loader": "^7.1.0",
     "pub-sub-es": "^2.0.1",
+    "rbush": "^3.0.1",
     "regenerator-runtime": "^0.13.7",
     "regl": "^2.1.0",
     "regl-scatterplot": "^1.4.0",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.0",
+    "@types/rbush": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "@vue/cli-plugin-babel": "~4.5.0",
