--- a/web/back/requirements.txt
+++ b/web/back/requirements.txt
@@ -1,4 +1,13 @@
-numpy==1.16.4
-Flask==2.1.0
-pandas==0.24.2
-Flask_Cors==3.0.7
+click==8.1.3
+Flask==2.2.2
+Flask-Cors==3.0.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.2
+pandas==1.5.3
+Pillow==9.4.0
+python-dateutil==2.8.2
+pytz==2022.7.1
+six==1.16.0
+Werkzeug==2.2.3
