--- a/web/back/requirements.txt
+++ b/web/back/requirements.txt
@@ -1,13 +1,35 @@
+boto3==1.26.78
+botocore==1.29.78
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
+Deprecated==1.2.13
 Flask==2.2.2
 Flask-Cors==3.0.10
+gunicorn==20.1.0
+honcho==1.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.2
 numpy==1.24.2
+opencv-python==4.7.0.72
 pandas==1.5.3
 Pillow==9.4.0
+pycparser==2.21
+PyGithub==1.58.0
+PyJWT==2.6.0
+PyNaCl==1.5.0
 python-dateutil==2.8.2
+python-decouple==3.7
+python-dotenv==0.21.1
 pytz==2022.7.1
+requests==2.28.2
+s3transfer==0.6.0
+scipy==1.10.1
 six==1.16.0
+urllib3==1.26.14
 Werkzeug==2.2.3
+wrapt==1.14.1
