--- a/web/back/requirements.txt
+++ b/web/back/requirements.txt
@@ -4,24 +4,31 @@ certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
 click==8.1.3
+contourpy==1.0.7
+cycler==0.11.0
 Deprecated==1.2.13
 Flask==2.2.2
 Flask-Cors==3.0.10
+fonttools==4.39.3
 gunicorn==20.1.0
 honcho==1.1.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
+kiwisolver==1.4.4
 MarkupSafe==2.1.2
+matplotlib==3.7.1
 numpy==1.24.2
 opencv-python==4.7.0.72
+packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
 pycparser==2.21
 PyGithub==1.58.0
 PyJWT==2.6.0
 PyNaCl==1.5.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-decouple==3.7
 python-dotenv==0.21.1
